--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -10,5 +10,6 @@ spec:
   type: service
   owner: user:guest
   lifecycle: experimental
-  # dependsOn:
-  #   - resource:crossplane-eks-demo-05
+  dependsOn:
+    - resource:crossplane-eks-demo-05
+    - component:carts-dynamodb
